
2.0.1
- Fix bug in dombind (when passed a null)
- Make 4 fixes from Debian: MIPS support, MIPS hppa fix for syscalls,
                            make sure -lm for numademo, build a static library 
- Fix parsing of /proc/self/status for 2.6.25 additions to it

2.0.2
- Various numademo improvements:
  * Fix random benchmark to use all specified memory
  * Rename to random2 to signify it's different
  * Optimize random benchmark by inlining random number generator fast path.
  * Clear caches between runs for more stable results
  * Add new random pointer chaser benchmark
  * Compile benchmarks with gcc vectorization if available
  * run numademo in regression test
- Add numa_exit_on_warn
- Fix no cpuset fallback in libnuma.c
- Install symlinks for the manpages of all new functions
- Make internal libnuma functions static
- Add copy_bitmask_to_bitmask() to numa.h
- Some cleanups
- Fix line reading in proc
- Add versions.ldscript to libnuma.so dependencies
- Remove the non-"numa_" functions from numacompat1.h and numa.h
- Add ia64 clearcache() to numademo
- Add -t to numademo for regression testing
- Remove "numa_all_cpus" from numa.h
- Changed VERSION1_COMPATIBILITY to NUMA_VERSION1_COMPATIBILITY
- Defined LIBNUMA_API_VERSION 2 in numa.h
- Fix numaif.h and numaint.h (migrate_pages; from Masatake Yamato)
- Fixes to numademo (min/max, and array index; from Kent Liu)
- Fixes to Makefile and permissions; from Berhard Walle

2.0.3-rc1
- Fixes to libnuma.c numa.h numacompat1.h by Daniel Gollub to fix v1 compatiblity
- Restore nodemask_zero() and nodemask_equal()
- Drops a warning message about this not being a NUMA system
- Remove the numa_maps.5 man page (it's in Linux now) (by Bernhard Walle)
- Fix makefiles in tests (Andi)
- Fixes for 64-bit big-endian systems (seen by Arnd Bergmann and Mijo Safradin)
- Fix off-by-ones in test mbind_mig_pages (Andi)
- Fix test/prefered.c (Andi)
- Fixes to read_mask()  (Arnd's on top of cpw's)