@@ -161,6 +161,8 @@ extern struct bitmask *numa_no_nodes_ptr;
 /* Source compatibility */
 extern nodemask_t numa_no_nodes;
 
+extern char *nodes_allowed_list;
+
 /* Only run and allocate memory from a specific set of nodes. */
 void numa_bind(struct bitmask *nodes);
 
@@ -270,6 +272,9 @@ static inline void numa_free_cpumask(struct bitmask *b)
 
 /* Convert node to CPU mask. -1/errno on failure, otherwise 0. */
 int numa_node_to_cpus(int, struct bitmask *);
+
+/* report the node of the specified cpu. -1/errno on invalid cpu. */
+int numa_node_of_cpu(int cpu);
 
 /* Report distance of node1 from node2. 0 on error.*/
 int numa_distance(int node1, int node2);
