@@ -276,7 +276,12 @@ updating in newer kernels (Mel Gorman)
 - Drops a warning message about this not being a NUMA system
 - Remove the numa_maps.5 man page (it's in Linux now) (by Bernhard Walle)
 - Fix makefiles in tests (Andi)
-- Fixes for 64-bit big-endian systems (seen by Arnd Bergmann and Mijo Safradin)
 - Fix off-by-ones in test mbind_mig_pages (Andi)
 - Fix test/prefered.c (Andi)
+- Fix to print_node_cpus() (Arnd/Bill Buros)
 - Fixes to read_mask()  (Arnd's on top of cpw's)
+- Fix to makefile (LDFLAGS/LDLIBS/AR/RANLIB) (Mike Frysinger)
+- Fix numactl for noncontiguous nodes (Amit Arora)
+- Fix bitmask memory leaks, numa_alloc_onnode/numa_preferred (Kornilios Kourtis)
+- Add numa_node_of_cpu() to retrieve local node of a cpu (Kornilios Kourtis)
+- Fix parsing of /proc/self/status (Brice Goglin)
